syntax = "proto3";
package defundhub.defund.etf;

import "etf/fund.proto";
// this line is used by starport scaffolding # genesis/proto/import
import "gogoproto/gogo.proto";

option go_package = "github.com/defund-labs/defund/x/etf/types";

// GenesisState defines the etf module's genesis state.
message GenesisState {
    repeated Fund fundList = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
