syntax = "proto3";
package defundlabs.defund.query;

option go_package = "github.com/defund-labs/defund/x/query/types";

import "ibc/core/client/v1/client.proto";

message Interquery {
  string storeid = 1;
  string chainid = 2; 
  string path = 3;
  bytes  key = 4; 
  uint64 timeoutHeight = 5; 
  string connectionId = 6;
  string clientId = 7;
}

message InterqueryResult {
  string creator = 1;
  string storeid = 2; 
  string chainid = 3; 
  bytes  data = 4;
  // queried chain height on submission
  ibc.core.client.v1.Height height = 5;
  // querying chain height on submission
  uint64 localHeight = 6;
  bool   success = 7;
  bool   proved = 8;
}

message InterqueryTimeoutResult {
  string storeid = 1;
  uint64 timeoutHeight = 2;
}

